2004-01-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-types.h, src/libnr/nr-rect.cpp (NR::Rect::corner):
	Change argument to unsigned, thus changing remainder operator to modulo
	operator, thus fixing bug for "negative" arguments (-1u etc.).

	* src/dialogs/stroke-style.cpp (sp_stroke_style_paint_update_repr): fix
	bug with unsigned->float alpha conversion.

	* src/nodepath.cpp (angle_normalize): Remove no-longer-used function.

	* src/draw-context.cpp (spdc_endpoint_snap_internal): Fix for
	negative options.rotationsnapsperpi.

2004-01-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/selection-chemistry.cpp (sp_selection_item_next,
	sp_selection_item_prev): cleanups, including moving some common
	code into new static function scroll_to_show_item.

	* src/widgets/font-selector.h, src/widgets/font-selector.cpp
	(sp_font_selector_set_font_fuzzy): Remove this unused function.

	* src/sp-text.cpp (sp_text_font_style_to_lookup),
	src/dialogs/text-edit.cpp (sp_text_edit_dialog_font_style_to_lookup):
	Move this duplicated function to src/libnrtype/font-style-to-pos.cpp
	as font_style_to_pos, rewriting & fixing its bugs in the process.
	Adjust callers.
	* src/libnrtype/font-style-to-pos.cpp, src/libnrtype/font-style-to-pos.h:
	New files.
	* src/libnrtype/Makefile.am: Mention the new files.
	* src/libnrtype/nr-type-pos-def.h: Make the default constructor fill in
	sensible values.
	Add constants for CSS weight numbers.

2004-01-13 MenTaLguY  <mental@rydia.net>

	* src/object-ui.cpp: 'Fill Settings' -> 'Fill and Stroke'

	* src/FilePath.cpp, src/FilePath.h: removed until we can rethink
	  the file stuff

2004-01-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/nr-type-directory.h,
	src/libnrtype/nr-type-directory.cpp (nr_type_directory_lookup_fuzzy):
	Change second arg from char const* to NRTypePosDef.
	(nr_type_calculate_position) Move to nr-type-pos-def.cpp as implicit
	NRTypePosDef constructor from string.